-------------
Version 0.7.1
-------------

COCKPIT
- Fixed a menu display bug that caused the bucket and object action menus to 
  appear behind other GUI elements on some Windows systems.

TOOLKIT

  * REST Implementation

- Fixed a configuration error that caused the REST implementation to be limited
  to 20 simultaneous connections, regardless of the "httpclient.max-connections" 
  property setting. Now the HttpClient connection manager settings 
  "max-per-host" and "max-total" are both set according to the JetS3t property
  "httpclient.max-connections".


-------------
Version 0.7.0
-------------

COCKPIT
- Added ability to view and manage Amazon CloudFront distributions using
  a dialog box.
- Added support for configuring Requester Pays buckets.
- Improved support for DevPay credentials, which can now be set and saved 
  directly in the login dialog box instead of only in a properties file.
- User preferences can now be remembered on your computer, so they do not need
  to be re-set every time you start Cockpit.
- Improved dialog box for generating Signed URLs. URLs for multiple objects
  can now be generated at once.

SYNCHRONIZE
- AWS credentials and the cryptographic password can now be provided via prompts
  on the command-line, rather than merely through a properties file.
- Added the --credentials option, which allows AWS credentials to be loaded from 
  an encrypted file rather than an insecure properties file. The encrypted file 
  can be created with the AWSCredentials API or the Cockpit application.
- Synchronize will act as an anonymous client if empty values are provided
  as the AWS access and secret keys. When the S3 connection is anonymous, only 
  public buckets will be accessible.
- Fixed a bug that prevented Synchronize from recognizing duplicate file names
  when uploading to an S3 subdirectory path when using the --batch option.  
- Synchronize will now prompt for HTTP Proxy login credentials if required. If